# scroll-shooter

./: CMakeLists.txt  README.md  build.bat  build_.bat  build_normal.bat  build_normal_jN.bat  build_normal_run.bat  build_run-jN.bat  build_run.bat  compile_all.bat  compile_all_debug.bat  compile_code.bat  compile_res.bat  copy_build_jN_run.bat  copy_res_src.bat  copy_rom.bat  rebuild.bat  rebuild_and_run-jN.bat  rebuild_and_run.bat  rebuild_and_run_debug.bat  run.bat  run.vbs  scroll-shooter.cbp  scroll-shooter.code-workspace  scroll-shooter.layout  sep_build_code.bat  sep_build_code2.bat  sep_build_code_run.bat  sep_rebuild_all.bat  sep_rebuild_all2.bat  sep_rebuild_all_run.bat  sep_rebuild_all_run2.bat  sep_rebuild_res.bat  sep_rebuild_res2.bat  timecmd.bat
Backup/: main.c  main2.c  main3.c  main_0.c  main_1.c  main_one_way_linked_list.c
res/: Enemy1-backup#1.pmp  Enemy1.pmp  bg_tileset.tsx  enemy1.pal  map.pmp  map.tmx  player-backup#1.pmp  player.pmp  resources.h  resources.res
res/sounds/: 03 - Back to the Fire (Stage 1 - Hydra).vgm  03 - Knights of Legend (Stage 1A).vgm  07 - Space Walk (Stage 2A).vgm  14 - Hunger Made Them Desperate (Stage 7 - Orn Base).vgm
src/: defs.h  enemy.c  enemy.h  enemy_type.h  explosion.c  explosion.h  game.c  game.h  game_object.c  game_object.h  game_types.h  globals.c  globals.h  main.c  player.c  player.h
